--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "*",
     "nodemailer": "0.3.29",
     "mongoose-validator": "~0.2.2",
-    "connect-flash": "~0.1.1"
+    "connect-flash": "~0.1.1",
+    "bcrypt": "~0.7.7"
   }
 }
