--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemailer": "0.3.29",
     "mongoose-validator": "~0.2.2",
     "connect-flash": "~0.1.1",
+    "connect-mongoose": "*",
     "bcrypt": "~0.7.7"
   }
 }
